test/bad/classes/type05.px

class A def
    Int x

class B(A) def
    Int y

b = [B(1, 2)]
[A]? a = b
